--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <link href="./pages/index.css" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="Яндекс.Практикум," name="keywords">
-    <meta content="Маша Брель, авел Кулебин" name="author">
+    <meta content="Маша Брель, Павел Кулебин" name="author">
 </head>
 <body>
+<header class="header">
 
+</header>
+
+<main class="content">
+
+</main>
+
+<footer class="footer">
+
+</footer>
 </body>
 </html>
