--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="Яндекс.Практикум," name="keywords">
     <meta content="Маша Брель, Павел Кулебин" name="author">
 </head>
-<body>
+<body class="page">
 <header class="header">
 
 </header>
