--- a/index.html
+++ b/index.html
@@ -10,14 +10,67 @@
 </head>
 <body class="page">
 <header class="header">
+    <nav class="header__links">
+        <a class="header__link" href="#" target="_blank">Мечты</a>
+        <a class="header__link" href="#" target="_blank">Ожидания</a>
+        <a class="header__link" href="#" target="_blank">Реальность</a>
+    </nav>
+    <p class="header__right-link">Пожаловаться</p>
 
 </header>
 
 <main class="content">
-
+    <section class="places">
+        <article class="place">
+            <h2 class="place__title">Поеду в лес</h2>
+            <img alt="Куршская коса" class="place__image" src="./images/places-forest.jpeg">
+            <div class="place__paragraphs">
+                <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
+                    —
+                    спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+                    Уникальная
+                    природная зона на краю российского анклава.
+                </p>
+                <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+                    исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
+                    наследие
+                    россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие
+                    природы и
+                    запах стального, прохладного моря.
+                </p>
+            </div>
+        </article>
+        <article class="place">
+            <h2 class="place__title">Поеду в горы</h2>
+            <img alt="Кольский" class="place__image" src="./images/places-mountains.jpeg">
+            <div class="place__paragraphs">
+                <p class="place__paragraph">Горные системы занимают 64 % поверхности Азии, 36 % — Северной Америки, 25 %
+                    — Европы, 22 % — Южной Америки, 17 % — Австралии и 3 % — Африки. В целом 24 % земной поверхности
+                    приходится на горы. 10 % всех людей живёт на территории гор. В горах берёт своё начало большинство
+                    рек Земли.
+                </p>
+            </div>
+        </article>
+        <article class="place">
+            <h2 class="place__title">Поеду на Чёрное море</h2>
+            <img alt="Алтай" class="place__image" src="./images/places-black-sea.jpeg">
+            <div class="place__paragraphs">
+                <p class="place__paragraph">Я уплыву туда, где ни разу я не был, туда, где никто раньше не был. Никто и
+                    никогда раньше не был, я уплыву. Я позову тебя смотреть на синее небо и пить по капле синее небо, и
+                    падать в это синее небо, я позову.
+                </p>
+                <p class="place__paragraph">Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море
+                    уеду я. Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море.
+                </p>
+                <p class="place__paragraph">Уеду я.
+                </p>
+            </div>
+        </article>
+    </section>
 </main>
 
 <footer class="footer">
+
 
 </footer>
 </body>
