без адаптива все блоки

--- a/index.html
+++ b/index.html
@@ -103,10 +103,64 @@
                 </div>
             </article>
         </section>
+
+        <section class="people">
+
+            <article class="lead__text">
+
+                <p class="lead__subtitle">люди</p>
+
+                <h2 class="lead__title">Что говорят и говорили люди о путешествиях</h2>
+
+            </article>
+
+            <div class="people__element">
+
+                <article class="card">
+
+                    <h3 class="card__title">Иван Бунин</h3>
+
+                    <p class="card__subtitle">Человека делают счастливым три вещи: любовь, интересная работа и
+                        возможность путешествовать.</p>
+
+                </article>
+
+                <article class="card">
+
+                    <h3 class="card__title">Альбер Камю</h3>
+
+                    <p class="card__subtitle">Путешествие как самая великая и серьезная наука помогает нам вновь обрести
+                        себя.</p>
+
+                </article>
+
+                <article class="card">
+
+                    <h3 class="card__title">Норвежская пословица</h3>
+
+                    <p class="card__subtitle">Лишь тот, кто странствует, открывает новые пути.</p>
+
+                </article>
+
+                <article class="card">
+
+                    <h3 class="card__title">Мария Захарова</h3>
+
+                    <p class="card__subtitle">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень
+                        рискованное предприятие.
+                    </p>
+
+                </article>
+
+            </div>
+
+        </section>
+
     </main>
 
     <footer class="footer">
 
+        <p class="footer__text">&copy; 2020</p>
 
     </footer>
 </body>
