--- a/index.html
+++ b/index.html
@@ -11,158 +11,147 @@
 </head>
 
 <body class="page">
-    <header class="header">
+<header class="header">
 
-        <nav class="header__links">
-            <a class="header__link" href="#" target="_blank">Мечты</a>
-            <a class="header__link" href="#" target="_blank">Ожидания</a>
-            <a class="header__link" href="#" target="_blank">Реальность</a>
-        </nav>
+    <nav class="header__links">
+        <a class="header__link" href="#" target="_blank">Мечты</a>
+        <a class="header__link" href="#" target="_blank">Ожидания</a>
+        <a class="header__link" href="#" target="_blank">Реальность</a>
+    </nav>
 
-        <a class="header__link" href="#" target="_blank">Пожаловаться</a>
+    <a class="header__right-link" href="#" target="_blank">Пожаловаться</a>
 
-    </header>
+</header>
 
-    <section class="lead">
+<section class="lead">
 
-        <div class="lead__text">
+    <div class="lead__text">
 
-            <p class="lead__subtitle">Куда я поеду</p>
+        <p class="lead__subtitle">Куда я поеду</p>
 
-            <h1 class="lead__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
+        <h1 class="lead__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
+
+    </div>
+
+    <img alt="картинка с фото из самолета" class="lead__image" src="./images/intro-image.jpeg"/>
+
+
+</section>
+
+<main class="content">
+    <section class="places">
+        <article class="place">
+            <img alt="Куршская коса" class="place__image" src="./images/places-forest.jpeg">
+            <div class="place__text">
+                <h2 class="place__title">Поеду в лес</h2>
+                <div class="place__paragraphs">
+                    <p class="place__paragraph">Лес — экологическая система, биоценоз, в которой главной жизненной
+                        формой являются деревья.
+                    </p>
+                    <p class="place__paragraph">Лес — составная часть природы, понятие «лес» можно рассматривать на
+                        разных уровнях. В глобальном масштабе — это часть биосферы, в локальном — это может быть
+                        насаждение. Леса занимают около трети площади суши.
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="place">
+            <div class="place__text">
+                <h2 class="place__title">Поеду в горы</h2>
+                <div class="place__paragraphs">
+                    <p class="place__paragraph">Горные системы занимают 64 % поверхности Азии, 36 % — Северной
+                        Америки, 25 %
+                        — Европы, 22 % — Южной Америки, 17 % — Австралии и 3 % — Африки. В целом 24 % земной
+                        поверхности
+                        приходится на горы. 10 % всех людей живёт на территории гор. В горах берёт своё начало
+                        большинство
+                        рек Земли.
+                    </p>
+                </div>
+            </div>
+            <img alt="Кольский" class="place__image" src="./images/places-mountains.jpeg">
+        </article>
+        <article class="place">
+            <img alt="Алтай" class="place__image" src="./images/places-black-sea.jpeg">
+            <div class="place__text">
+                <h2 class="place__title">Поеду на Чёрное море</h2>
+                <div class="place__paragraphs">
+                    <p class="place__paragraph">Я уплыву туда, где ни разу я не был, туда, где никто раньше не был.
+                        Никто и
+                        никогда раньше не был, я уплыву. Я позову тебя смотреть на синее небо и пить по капле синее
+                        небо, и
+                        падать в это синее небо, я позову.
+                    </p>
+                    <p class="place__paragraph">Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на
+                        Чёрное-Чёрное море
+                        уеду я. Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море.
+                    </p>
+                    <p class="place__paragraph">Уеду я.
+                    </p>
+                </div>
+            </div>
+        </article>
+    </section>
+
+    <section class="people">
+
+        <article class="lead__text">
+
+            <p class="lead__subtitle">люди</p>
+
+            <h2 class="lead__title">Что говорят и говорили люди о путешествиях</h2>
+
+        </article>
+
+        <div class="people__element">
+
+            <article class="card">
+
+                <h3 class="card__title">Иван Бунин</h3>
+
+                <p class="card__subtitle">Человека делают счастливым три вещи: любовь, интересная работа и
+                    возможность путешествовать.</p>
+
+            </article>
+
+            <article class="card">
+
+                <h3 class="card__title">Альбер Камю</h3>
+
+                <p class="card__subtitle">Путешествие как самая великая и серьезная наука помогает нам вновь обрести
+                    себя.</p>
+
+            </article>
+
+            <article class="card">
+
+                <h3 class="card__title">Норвежская пословица</h3>
+
+                <p class="card__subtitle">Лишь тот, кто странствует, открывает новые пути.</p>
+
+            </article>
+
+            <article class="card">
+
+                <h3 class="card__title">Мария Захарова</h3>
+
+                <p class="card__subtitle">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень
+                    рискованное предприятие.
+                </p>
+
+            </article>
 
         </div>
 
-        <img alt="картинка с фото из самолета" class="lead__image" src="./images/intro-image.jpeg" />
-
-
     </section>
 
-    <main class="content">
-        <section class="places">
-            <article class="place">
-                <img alt="Куршская коса" class="place__image" src="./images/places-forest.jpeg">
-                <div class="place__text">
-                    <h2 class="place__title">Поеду в лес</h2>
-                    <div class="place__paragraphs">
-                        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-                            горизонта
-                            —
-                            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
-                            другой.
-                            Уникальная
-                            природная зона на краю российского анклава.
-                        </p>
-                        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для
-                            путешественника и
-                            исследователя там же по соседству — самая западная точка России, Балтийская коса, — и
-                            немецкое
-                            наследие
-                            россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
-                            спокойствие
-                            природы и
-                            запах стального, прохладного моря.
-                        </p>
-                    </div>
-                </div>
-            </article>
-            <article class="place">
-                <div class="place__text">
-                    <h2 class="place__title">Поеду в горы</h2>
-                    <div class="place__paragraphs">
-                        <p class="place__paragraph">Горные системы занимают 64 % поверхности Азии, 36 % — Северной
-                            Америки, 25 %
-                            — Европы, 22 % — Южной Америки, 17 % — Австралии и 3 % — Африки. В целом 24 % земной
-                            поверхности
-                            приходится на горы. 10 % всех людей живёт на территории гор. В горах берёт своё начало
-                            большинство
-                            рек Земли.
-                        </p>
-                    </div>
-                </div>
-                <img alt="Кольский" class="place__image" src="./images/places-mountains.jpeg">
-            </article>
-            <article class="place">
-                <img alt="Алтай" class="place__image" src="./images/places-black-sea.jpeg">
-                <div class="place__text">
-                    <h2 class="place__title">Поеду на Чёрное море</h2>
-                    <div class="place__paragraphs">
-                        <p class="place__paragraph">Я уплыву туда, где ни разу я не был, туда, где никто раньше не был.
-                            Никто и
-                            никогда раньше не был, я уплыву. Я позову тебя смотреть на синее небо и пить по капле синее
-                            небо, и
-                            падать в это синее небо, я позову.
-                        </p>
-                        <p class="place__paragraph">Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на
-                            Чёрное-Чёрное море
-                            уеду я. Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море.
-                        </p>
-                        <p class="place__paragraph">Уеду я.
-                        </p>
-                    </div>
-                </div>
-            </article>
-        </section>
+</main>
 
-        <section class="people">
+<footer class="footer">
 
-            <article class="lead__text">
+    <p class="footer__text">&copy; 2020</p>
 
-                <p class="lead__subtitle">люди</p>
-
-                <h2 class="lead__title">Что говорят и говорили люди о путешествиях</h2>
-
-            </article>
-
-            <div class="people__element">
-
-                <article class="card">
-
-                    <h3 class="card__title">Иван Бунин</h3>
-
-                    <p class="card__subtitle">Человека делают счастливым три вещи: любовь, интересная работа и
-                        возможность путешествовать.</p>
-
-                </article>
-
-                <article class="card">
-
-                    <h3 class="card__title">Альбер Камю</h3>
-
-                    <p class="card__subtitle">Путешествие как самая великая и серьезная наука помогает нам вновь обрести
-                        себя.</p>
-
-                </article>
-
-                <article class="card">
-
-                    <h3 class="card__title">Норвежская пословица</h3>
-
-                    <p class="card__subtitle">Лишь тот, кто странствует, открывает новые пути.</p>
-
-                </article>
-
-                <article class="card">
-
-                    <h3 class="card__title">Мария Захарова</h3>
-
-                    <p class="card__subtitle">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень
-                        рискованное предприятие.
-                    </p>
-
-                </article>
-
-            </div>
-
-        </section>
-
-    </main>
-
-    <footer class="footer">
-
-        <p class="footer__text">&copy; 2020</p>
-
-    </footer>
+</footer>
 </body>
 
 </html>
