--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <main class="content">
     <section class="places">
         <article class="place">
-            <img alt="Куршская коса" class="place__image" src="./images/places-forest.jpeg">
+            <img alt="лес с водопадом" class="place__image" src="./images/places-forest.jpeg">
             <div class="place__text">
                 <h2 class="place__title">Поеду в лес</h2>
                 <div class="place__paragraphs">
@@ -69,10 +69,10 @@
                     </p>
                 </div>
             </div>
-            <img alt="Кольский" class="place__image" src="./images/places-mountains.jpeg">
+            <img alt="горы" class="place__image" src="./images/places-mountains.jpeg">
         </article>
         <article class="place">
-            <img alt="Алтай" class="place__image" src="./images/places-black-sea.jpeg">
+            <img alt="Чёрное море" class="place__image" src="./images/places-black-sea.jpeg">
             <div class="place__text">
                 <h2 class="place__title">Поеду на Чёрное море</h2>
                 <div class="place__paragraphs">
