--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="lead__text">
 
-        <p class="lead__subtitle">Куда я поеду</p>
+        <p class="lead__subtitle lead__subtitle_size">Куда я поеду</p>
 
         <h1 class="lead__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
 
@@ -99,7 +99,7 @@
 
             <p class="lead__subtitle">люди</p>
 
-            <h2 class="lead__title">Что говорят и говорили люди о путешествиях</h2>
+            <h2 class="lead__title lead__title_size">Что говорят и говорили люди о путешествиях</h2>
 
         </article>
 
